--- a/.gitignore
+++ b/.gitignore
@@ -361,3 +361,5 @@ MigrationBackup/
 
 # Fody - auto-generated XML schema
 FodyWeavers.xsd
+/base64/Properties/launchSettings.json
+/checksum/My Project/launchSettings.json
