--- a/base64/base64.csproj
+++ b/base64/base64.csproj
@@ -3,7 +3,7 @@
 
   <PropertyGroup>
     <OutputType>Exe</OutputType>
-    <TargetFrameworks>net40;netstandard2.0;netcoreapp3.1</TargetFrameworks>
+    <TargetFrameworks>net20;net40;netstandard2.0;netcoreapp3.1</TargetFrameworks>
   </PropertyGroup>
 
 </Project>
