--- a/checksum/checksum.vbproj
+++ b/checksum/checksum.vbproj
@@ -3,7 +3,7 @@
 
   <PropertyGroup>
     <OutputType>Exe</OutputType>
-    <TargetFrameworks>net20;net40;netstandard2.0;netcoreapp3.1</TargetFrameworks>
+    <TargetFrameworks>netcoreapp3.1;net20;net40;netstandard2.0</TargetFrameworks>
   </PropertyGroup>
 
 </Project>
