"zipio list" wildcards support

--- a/.gitignore
+++ b/.gitignore
@@ -363,3 +363,4 @@ MigrationBackup/
 FodyWeavers.xsd
 /base64/Properties/launchSettings.json
 /checksum/My Project/launchSettings.json
+/ZipIO/Properties/launchSettings.json
