--- a/TestAssembly/Properties/launchSettings.json
+++ b/TestAssembly/Properties/launchSettings.json
@@ -1,7 +1,8 @@
 {
   "profiles": {
     "TestAssembly": {
-      "commandName": "Project"
+      "commandName": "Project",
+      "commandLineArgs": "ZipIO.dll"
     }
   }
 }
