--- a/netcheck/netcheck.vbproj
+++ b/netcheck/netcheck.vbproj
@@ -3,7 +3,13 @@
 
   <PropertyGroup>
     <OutputType>Exe</OutputType>
-    <TargetFrameworks>net20;net40;netstandard2.0;netcoreapp3.1</TargetFrameworks>
+    <TargetFrameworks>net47;net20;net40;netstandard2.0;netcoreapp3.1</TargetFrameworks>
   </PropertyGroup>
 
+	<ItemGroup Condition="'$(TargetFramework.CompareTo(`net47`))' &gt;= 0">
+	  <PackageReference Include="System.Reflection.Metadata">
+	    <Version>6.0.0</Version>
+	  </PackageReference>
+	</ItemGroup>
+	
 </Project>
