Removed ResGen dependenices

--- a/Directory.Build.props
+++ b/Directory.Build.props
@@ -14,6 +14,7 @@
     <LangVersion Condition="'$(MSBuildProjectExtension)' == '.csproj'">9.0</LangVersion>
     <OptionStrict Condition="'$(MSBuildProjectExtension)' == '.vbproj'">On</OptionStrict>
     <DelaySign>false</DelaySign>
+    <RollForward>LatestMajor</RollForward>
   </PropertyGroup>
 
 </Project>
