--- a/ReplaceText/ReplaceText.csproj
+++ b/ReplaceText/ReplaceText.csproj
@@ -3,6 +3,7 @@
 
   <PropertyGroup>
     <OutputType>Exe</OutputType>
+    <Copyright>Copyright © Olof Lagerkvist, LTR Data 2015-2022</Copyright>
     <TargetFrameworks>net40;netstandard2.0;netcoreapp3.1</TargetFrameworks>
   </PropertyGroup>
 
