--- a/base64/base64.csproj
+++ b/base64/base64.csproj
@@ -3,6 +3,7 @@
 
   <PropertyGroup>
     <OutputType>Exe</OutputType>
+    <Copyright>Copyright © Olof Lagerkvist, LTR Data 2014-2022</Copyright>
     <TargetFrameworks>net20;net40;netstandard2.0;netcoreapp3.1</TargetFrameworks>
   </PropertyGroup>
 
