--- a/checksum/checksum.vbproj
+++ b/checksum/checksum.vbproj
@@ -3,6 +3,7 @@
 
   <PropertyGroup>
     <OutputType>Exe</OutputType>
+    <Copyright>Copyright © Olof Lagerkvist, LTR Data 2012-2022</Copyright>
     <TargetFrameworks>netcoreapp3.1;net20;net40;netstandard2.0</TargetFrameworks>
   </PropertyGroup>
 
