--- a/hexdump/hexdump.csproj
+++ b/hexdump/hexdump.csproj
@@ -2,7 +2,7 @@
 
   <PropertyGroup>
     <OutputType>Exe</OutputType>
-    <TargetFrameworks>net40;net35;netcoreapp3.1</TargetFrameworks>
+    <TargetFrameworks>net40;net35;net6.0</TargetFrameworks>
   </PropertyGroup>
 
   <ItemGroup>
@@ -13,12 +13,9 @@
       <HintPath>..\..\LTRLib\$(Configuration)\$(TargetFramework)\LTRLib40.Extended.dll</HintPath>
     </Reference>
     <Reference Include="LTRLib.Windows">
-      <HintPath>..\..\LTRLib\$(Configuration)\$(TargetFramework)\LTRLib.Windows.dll</HintPath>
+      <HintPath Condition="'$(TargetFramework.CompareTo(`net5`))' &lt; 0">..\..\LTRLib\$(Configuration)\$(TargetFramework)\LTRLib.Windows.dll</HintPath>
+      <HintPath Condition="'$(TargetFramework.CompareTo(`net5`))' &gt;= 0">..\..\LTRLib\$(Configuration)\$(TargetFramework)-windows\LTRLib.Windows.dll</HintPath>
     </Reference>
-  </ItemGroup>
-
-  <ItemGroup>
-    <Folder Include="Properties\" />
   </ItemGroup>
 
 </Project>
