--- a/luhn/luhn.vbproj
+++ b/luhn/luhn.vbproj
@@ -4,7 +4,7 @@
   <PropertyGroup>
     <OutputType>Exe</OutputType>
     <Copyright>Copyright © Olof Lagerkvist, LTR Data 2012-2022</Copyright>
-    <TargetFrameworks>net20;net40;netstandard2.0;netcoreapp3.1</TargetFrameworks>
+    <TargetFrameworks>net20;net40;net6.0</TargetFrameworks>
   </PropertyGroup>
 
 </Project>
