--- a/hexdump/hexdump.csproj
+++ b/hexdump/hexdump.csproj
@@ -2,12 +2,12 @@
 
   <PropertyGroup>
     <OutputType>Exe</OutputType>
-    <TargetFrameworks>net40;net35;net6.0</TargetFrameworks>
+    <TargetFrameworks>net40;net6.0</TargetFrameworks>
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="LTRLib40" Version="1.0.0" />
-    <PackageReference Include="LTRLib40.Extended" Version="1.0.0" />
+    <PackageReference Include="LTRLib40" Version="*" />
+    <PackageReference Include="LTRLib40.Extended" Version="*" />
   </ItemGroup>
 
 </Project>
