Code cleanup etc

--- a/Directory.Build.props
+++ b/Directory.Build.props
@@ -9,6 +9,7 @@
     <DelaySign>false</DelaySign>
     <RollForward>LatestMajor</RollForward>
     <CopyLocalLockFileAssemblies>true</CopyLocalLockFileAssemblies>
+    <Nullable>enable</Nullable>
   </PropertyGroup>
 
   <PropertyGroup>
