--- a/ZipIO/ZipIO.csproj
+++ b/ZipIO/ZipIO.csproj
@@ -2,7 +2,7 @@
 
   <PropertyGroup>
     <Description>ZipIO Core Console Application</Description>
-    <TargetFrameworks>net6.0;net46</TargetFrameworks>
+    <TargetFrameworks>net6.0;net46;netstandard2.0</TargetFrameworks>
     <AssemblyName>ZipIO</AssemblyName>
     <OutputType>Exe</OutputType>
     <Nullable>enable</Nullable>
