--- a/checksum/checksum.vbproj
+++ b/checksum/checksum.vbproj
@@ -4,7 +4,11 @@
   <PropertyGroup>
     <OutputType>Exe</OutputType>
     <Copyright>Copyright © Olof Lagerkvist, LTR Data 2012-2022</Copyright>
-    <TargetFrameworks>net20;net40;net6.0</TargetFrameworks>
+    <TargetFrameworks>net35;net40;net6.0</TargetFrameworks>
   </PropertyGroup>
 
+  <ItemGroup>
+    <PackageReference Include="LTRLib40" Version="*" />
+  </ItemGroup>
+  
 </Project>
