--- a/TestAssembly/TestAssembly.csproj
+++ b/TestAssembly/TestAssembly.csproj
@@ -7,4 +7,8 @@
     <TargetFrameworks>net48;net6.0</TargetFrameworks>
   </PropertyGroup>
 
+  <ItemGroup>
+    <PackageReference Include="LTRLib40" Version="*" />
+  </ItemGroup>
+
 </Project>
