--- a/netcheck/netcheck.csproj
+++ b/netcheck/netcheck.csproj
@@ -5,14 +5,12 @@
     <OutputType>Exe</OutputType>
     <Title>netcheck</Title>
     <Product>netcheck</Product>
-    <Copyright>Copyright © Olof Lagerkvist, LTR Data 2011-2022</Copyright>
-    <TargetFrameworks>net48;net20;net40;net6.0</TargetFrameworks>
+    <Copyright>Copyright © Olof Lagerkvist, LTR Data 2011-2023</Copyright>
+    <TargetFrameworks>net48;net20;net40;net6.0;net7.0</TargetFrameworks>
   </PropertyGroup>
 
 	<ItemGroup Condition="'$(TargetFramework.CompareTo(`net47`))' &gt;= 0">
-	  <PackageReference Include="System.Reflection.Metadata">
-	    <Version>6.0.0</Version>
-	  </PackageReference>
+	  <PackageReference Include="System.Reflection.Metadata" Version="6.0.0" />
 	</ItemGroup>
 
 </Project>
