--- a/VhdBlockBackup/VhdBlockBackup.csproj
+++ b/VhdBlockBackup/VhdBlockBackup.csproj
@@ -7,7 +7,7 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="LTRLib40" Version="*" />
+    <PackageReference Include="LTRData.Extensions" Version="*" />
     <PackageReference Include="LTRData.DiscUtils.Containers" Version="*" />
   </ItemGroup>
   
