--- a/checksum/checksum.csproj
+++ b/checksum/checksum.csproj
@@ -4,11 +4,11 @@
   <PropertyGroup>
     <OutputType>Exe</OutputType>
     <Copyright>Copyright © Olof Lagerkvist, LTR Data 2012-2023</Copyright>
-    <TargetFrameworks>net35;net40;net6.0</TargetFrameworks>
+    <TargetFrameworks>net35;net40;netstandard2.1;net6.0</TargetFrameworks>
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="LTRLib40" Version="*" />
+    <PackageReference Include="LTRData.Extensions" Version="*" />
   </ItemGroup>
   
 </Project>
