--- a/ReplaceText/ReplaceText.csproj
+++ b/ReplaceText/ReplaceText.csproj
@@ -4,7 +4,7 @@
   <PropertyGroup>
     <OutputType>Exe</OutputType>
     <Copyright>Copyright © Olof Lagerkvist, LTR Data 2015-2022</Copyright>
-    <TargetFrameworks>net40;net6.0</TargetFrameworks>
+    <TargetFrameworks>net40;net6.0;net8.0</TargetFrameworks>
   </PropertyGroup>
 
 </Project>
