--- a/netcheck/netcheck.csproj
+++ b/netcheck/netcheck.csproj
@@ -6,7 +6,7 @@
     <Title>netcheck</Title>
     <Product>netcheck</Product>
     <Copyright>Copyright © Olof Lagerkvist, LTR Data 2011-2023</Copyright>
-    <TargetFrameworks>net48;netstandard2.1;net20;net40;net6.0;net7.0</TargetFrameworks>
+    <TargetFrameworks>net48;netstandard2.1;net20;net40;net6.0;net8.0;net7.0</TargetFrameworks>
   </PropertyGroup>
 
 	<ItemGroup Condition="'$(TargetFramework.CompareTo(`net47`))' &gt;= 0">
