--- a/splitbystr/splitbystr.csproj
+++ b/splitbystr/splitbystr.csproj
@@ -1,8 +1,8 @@
-<Project Sdk="Microsoft.NET.Sdk">
+﻿<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
     <OutputType>Exe</OutputType>
-    <TargetFrameworks>net6.0;netstandard2.1;net48</TargetFrameworks>
+    <TargetFrameworks>net6.0;net8.0;netstandard2.1;net48</TargetFrameworks>
   </PropertyGroup>
 
   <PropertyGroup>
@@ -15,6 +15,7 @@
     <PackageReference Include="System.IO.Pipelines" Version="6.0.*" Condition="'$(TargetFramework)' == 'net48'" />
     <PackageReference Include="System.IO.Pipelines" Version="6.0.*" Condition="'$(TargetFramework)' == 'netstandard2.1'" />
     <PackageReference Include="System.IO.Pipelines" Version="7.0.*" Condition="'$(TargetFramework)' == 'net6.0'" />
+    <PackageReference Include="System.IO.Pipelines" Version="8.0.*" Condition="'$(TargetFramework)' == 'net8.0'" />
   </ItemGroup>
 
 </Project>
