--- a/checksum/checksum.csproj
+++ b/checksum/checksum.csproj
@@ -3,8 +3,8 @@
 
   <PropertyGroup>
     <OutputType>Exe</OutputType>
-    <Copyright>Copyright © Olof Lagerkvist, LTR Data 2012-2023</Copyright>
-    <TargetFrameworks>net35;net40;netstandard2.1;net6.0;net8.0</TargetFrameworks>
+    <Copyright>Copyright © Olof Lagerkvist, LTR Data 2012-2024</Copyright>
+    <TargetFrameworks>net40;netstandard2.1;net6.0;net8.0</TargetFrameworks>
   </PropertyGroup>
 
   <ItemGroup>
