--- a/VhdBlockBackup/VhdBlockBackup.csproj
+++ b/VhdBlockBackup/VhdBlockBackup.csproj
@@ -1,4 +1,4 @@
-<Project Sdk="Microsoft.NET.Sdk">
+﻿<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
     <OutputType>Exe</OutputType>
@@ -9,6 +9,12 @@
   <ItemGroup>
     <PackageReference Include="LTRData.Extensions" Version="*" />
     <PackageReference Include="LTRData.DiscUtils.Containers" Version="*" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <None Update="examples.txt">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </None>
   </ItemGroup>
   
 </Project>
