--- a/reged/reged.csproj
+++ b/reged/reged.csproj
@@ -2,7 +2,7 @@
 
   <PropertyGroup>
     <OutputType>Exe</OutputType>
-    <TargetFrameworks>net46;net48;netstandard2.1;net9.0;net8.0</TargetFrameworks>
+    <TargetFrameworks>net48;netstandard2.1;net9.0;net8.0</TargetFrameworks>
     <ImplicitUsings>disable</ImplicitUsings>
     <Nullable>enable</Nullable>
   </PropertyGroup>
@@ -12,6 +12,7 @@
     <PackageReference Include="LTRData.DiscUtils.Registry" Version="*" />
     <PackageReference Include="LTRData.DiscUtils.Containers" Version="*" />
     <PackageReference Include="LTRData.DiscUtils.FileSystems" Version="*" />
+    <PackageReference Include="ArsenalRecon.ImageMounter" Version="*" />
   </ItemGroup>
 
 </Project>
