--- a/peinfo/peinfo.csproj
+++ b/peinfo/peinfo.csproj
@@ -14,6 +14,7 @@
     <PackageReference Include="System.Reflection.Metadata" Version="*" />
     <PackageReference Include="LTRData.DiscUtils.Wim" Version="*" />
     <PackageReference Include="LTRData.DiscUtils" Version="*" />
+    <PackageReference Include="System.Security.Cryptography.Pkcs" Version="*" />
   </ItemGroup>
   
 </Project>
