--- a/NetCompress/NetCompress.vbproj
+++ b/NetCompress/NetCompress.vbproj
@@ -3,7 +3,7 @@
 
   <PropertyGroup>
     <OutputType>Exe</OutputType>
-    <TargetFrameworks>net40;net9.0;net8.0</TargetFrameworks>
+    <TargetFrameworks>net40;netstandard2.1;net9.0;net8.0</TargetFrameworks>
   </PropertyGroup>
 
 </Project>
