Added support for LZ4

--- a/peinfo/peinfo.csproj
+++ b/peinfo/peinfo.csproj
@@ -15,6 +15,7 @@
     <PackageReference Include="LTRData.DiscUtils.Wim" Version="*" />
     <PackageReference Include="LTRData.DiscUtils" Version="*" />
     <PackageReference Include="System.Security.Cryptography.Pkcs" Version="*" />
+    <PackageReference Include="K4os.Compression.LZ4.Streams"></PackageReference>
   </ItemGroup>
   
 </Project>
