--- a/TestProject/TestProject.csproj
+++ b/TestProject/TestProject.csproj
@@ -15,6 +15,7 @@
   </ItemGroup>
 
   <ItemGroup>
+    <ProjectReference Include="..\peinfo\peinfo.csproj" />
     <ProjectReference Include="..\reged\reged.csproj" />
   </ItemGroup>
 
