--- a/ExtractExeNetStrings/ExtractExeNetStrings.csproj
+++ b/ExtractExeNetStrings/ExtractExeNetStrings.csproj
@@ -3,7 +3,7 @@
 
   <PropertyGroup>
     <OutputType>Exe</OutputType>
-    <TargetFrameworks>net20;net40;net9.0;net8.0</TargetFrameworks>
+    <TargetFrameworks>net20;net40;net10.0;net9.0;net8.0</TargetFrameworks>
   </PropertyGroup>
 
 </Project>
