--- a/ZipIO/ZipIO.csproj
+++ b/ZipIO/ZipIO.csproj
@@ -2,7 +2,7 @@
 
   <PropertyGroup>
     <Description>ZipIO Core Console Application</Description>
-    <TargetFrameworks>net9.0;net8.0;net46;netstandard2.0;netstandard2.1</TargetFrameworks>
+    <TargetFrameworks>net10.0;net9.0;net8.0;net46;netstandard2.0;netstandard2.1</TargetFrameworks>
     <AssemblyName>ZipIO</AssemblyName>
     <OutputType>Exe</OutputType>
     <Nullable>enable</Nullable>
