--- a/checksum/checksum.csproj
+++ b/checksum/checksum.csproj
@@ -4,7 +4,7 @@
   <PropertyGroup>
     <OutputType>Exe</OutputType>
     <Copyright>Copyright © Olof Lagerkvist, LTR Data 2012 - 2025</Copyright>
-    <TargetFrameworks>net40;netstandard2.1;net9.0;net8.0</TargetFrameworks>
+    <TargetFrameworks>net40;netstandard2.1;net10.0;net9.0;net8.0</TargetFrameworks>
   </PropertyGroup>
 
   <ItemGroup>
