--- a/peinfo/peinfo.csproj
+++ b/peinfo/peinfo.csproj
@@ -2,7 +2,7 @@
 
   <PropertyGroup>
     <OutputType>Exe</OutputType>
-    <TargetFrameworks>net9.0;net48;netstandard2.1</TargetFrameworks>
+    <TargetFrameworks>net10.0;net9.0;net48;netstandard2.1</TargetFrameworks>
     <ImplicitUsings>enable</ImplicitUsings>
     <Nullable>enable</Nullable>
     <AllowUnsafeBlocks>true</AllowUnsafeBlocks>
