--- a/hexdump/hexdump.csproj
+++ b/hexdump/hexdump.csproj
@@ -2,7 +2,7 @@
 
   <PropertyGroup>
     <OutputType>Exe</OutputType>
-    <TargetFrameworks>net48;netstandard2.1;net9.0;net8.0</TargetFrameworks>
+    <TargetFrameworks>net48;netstandard2.1;net10.0;net9.0;net8.0</TargetFrameworks>
   </PropertyGroup>
 
   <ItemGroup>
