--- a/PictureOnMap/PictureOnMap.csproj
+++ b/PictureOnMap/PictureOnMap.csproj
@@ -7,11 +7,11 @@
     <TargetFrameworks>net46;net10.0-windows;net9.0-windows;net8.0-windows</TargetFrameworks>
     <ApplicationIcon>icons8-country-80.ico</ApplicationIcon>
     <UseWindowsForms>true</UseWindowsForms>
+	  <EnableWindowsTargeting>true</EnableWindowsTargeting>
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="LTRLib40" Version="*" />
-    <PackageReference Include="LTRLib.Placemarks" Version="*" />
+    <PackageReference Include="LTRData.Placemarks" Version="*" />
     <PackageReference Include="LTRLib.Windows" Version="*" />
   </ItemGroup>
 
